More generic build script

--- a/php/mongodb/Dockerfile
+++ b/php/mongodb/Dockerfile
@@ -1,6 +1,5 @@
 # Build arguments
 ARG VERSION
-ARG DB
 
 # Alpine base image
 FROM php:${VERSION}-fpm-alpine
@@ -14,26 +13,17 @@ RUN apk update && \
     apk add --no-cache --virtual dev-deps autoconf gcc g++ make && \
     apk add --no-cache git rsync bash bash-completion nano curl unzip openssl-dev shadow \
         libzip-dev libxslt-dev icu-dev freetype-dev libxpm-dev libgomp \
-        libpng-dev libjpeg-turbo-dev libwebp-dev libwebp-tools && \
+        libpng-dev libjpeg-turbo-dev libwebp-dev libwebp-tools \
+        imagemagick-dev imagemagick jpegoptim pngquant \
+        nodejs yarn && \
+    echo "autodetect" | pecl install imagick && \
     echo "no" | pecl install redis
 
-# MySQL dependencies
-RUN if [ "${DB}" = "mysql" ]; then \
-    apk add --no-cache mysql-client && \
-    docker-php-ext-configure gd --with-freetype --with-jpeg --with-webp && \
-    docker-php-ext-configure mysqli --with-mysqli=mysqlnd && \
-    docker-php-ext-configure pdo_mysql --with-pdo-mysql=mysqlnd && \
-    docker-php-ext-enable opcache redis && \
-    docker-php-ext-install mysqli pdo_mysql exif gd pcntl intl xsl zip; \
-fi
-
 # MongoDB dependencies
-RUN if [ "${DB}" = "mongodb" ]; then \
-    apk add --no-cache mongodb-tools && \
+RUN apk add --no-cache mongodb-tools && \
     docker-php-ext-configure gd --with-freetype --with-jpeg --with-webp && \
-    docker-php-ext-enable opcache redis mongodb && \
-    docker-php-ext-install exif gd pcntl intl xsl zip; \
-fi
+    docker-php-ext-enable opcache imagick redis mongodb && \
+    docker-php-ext-install exif gd pcntl intl xsl zip
 
 # Cleanup
 RUN apk del --no-cache dev-deps && \
