PHP mongodb image fix

--- a/php/mongodb/Dockerfile
+++ b/php/mongodb/Dockerfile
@@ -21,6 +21,7 @@ RUN apk update && \
 
 # MongoDB dependencies
 RUN apk add --no-cache mongodb-tools && \
+    echo "no" | pecl install mongodb-1.16 && \
     docker-php-ext-configure gd --with-freetype --with-jpeg --with-webp && \
     docker-php-ext-enable opcache imagick redis mongodb && \
     docker-php-ext-install exif gd pcntl intl xsl zip
