--- a/varnish/6.0/Dockerfile
+++ b/varnish/6.0/Dockerfile
@@ -1,7 +1,12 @@
 FROM wodby/varnish:6.0
 
 ENV VARNISH_IMPORT_MODULES=geoip,digest,cookie,vsthrottle,header,softpurge,tcp,xkeys
+
 COPY default.vcl /etc/varnish/default.vcl
+COPY docker-entrypoint.sh /docker-entrypoint.sh
+COPY templates/varnishd.init.d.tmpl /etc/gotpl/varnishd.init.d.tmpl
+
+EXPOSE 80 81 8443
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
 
