Update MongoDB extension version for 8.3

--- a/php/8.3/mongodb/slim/Dockerfile
+++ b/php/8.3/mongodb/slim/Dockerfile
@@ -18,7 +18,7 @@ RUN apk update && \
 
 # MongoDB dependencies
 RUN apk add --no-cache mongodb-tools && \
-    echo "no" | pecl install mongodb-1.16.2 && \
+    echo "no" | pecl install mongodb && \
     docker-php-ext-configure gd --with-freetype --with-jpeg --with-webp && \
     docker-php-ext-enable opcache redis mongodb && \
     docker-php-ext-install exif gd pcntl intl xsl zip
